--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 
     </header>
-    <script src="scripthome.js"></script>
+    <script src="Css/scripthome.js"></script>
 
     <!-- Feed Principal -->
     <div class="feed-container">
