--- a/paginas/paginaTorneios.html
+++ b/paginas/paginaTorneios.html
@@ -210,7 +210,7 @@
     </header>
 
     <script src="../Css/script.js"></script>
-    <main>
+    <main class="container-fluid" >
 
         <div class="container-fluid">
             <div class="row" style="width: 100%;">
