--- a/paginas/paginaTorneios.html
+++ b/paginas/paginaTorneios.html
@@ -21,7 +21,7 @@
                 <a href="../index.html">
                     <img style="padding: 6px;" src="../IMG/Cabecalho/Logo White.png" alt="" width="60px ">
                 </a>
-                <h2 style="color: #fff; margin: auto;">Torneios</h2>
+                <!-- <h2 style="color: #fff; margin: auto;">Torneios</h2> -->
             </div>
 
             <div class="nav-list">
@@ -210,7 +210,7 @@
     </header>
 
     <script src="../Css/script.js"></script>
-    <main class="container-fluid" >
+    <main>
 
         <div class="container-fluid">
             <div class="row" style="width: 100%;">
@@ -221,7 +221,7 @@
                         <option selected>Jogos</option>
                         <option value="">Valorant</option>
                         <option value="">Apex legends</option>
-                        <option value="">PURG</option>
+                        <option value="">PUBG</option>
                         <option value="">CS GO</option>
                         <option value="">Warzone</option>
                         <option value="">Minecraft</option>
@@ -290,10 +290,9 @@
                 <div class="col-md-8 col-sm-12" id="cards-torneios">
                     <div class="row row-cols-1 row-cols-md-2 g-4">
                         <div class="col">
-                            <div class="card">
-                                <div class="card-body" style="
-                   height: 120px;">
-                                    <h5 class="card-title" style="font-size: 12px;">PUBG</h5>
+                            <div class="card ">
+                                <div class="card-body">
+                                    <h5 class="card-title " style="font-size: 12px;">PUBG</h5>
                                     <div class="text-card">
                                         <p>LPL Summer 2023
                                             Overview</p>
@@ -314,8 +313,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-body" style="
-                  height: 120px;">
+                                <div class="card-body">
                                     <h5 class="card-title" style="font-size: 12px;">Valorant</h5>
                                     <div class="text-card" style="font-size: 15px;">
                                         <p>VALORANT Challengers 2023: North America Challenger Playoffs</p>
@@ -336,8 +334,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-body" style="
-                  height: 120px;">
+                                <div class="card-body">
                                     <h5 class="card-title" style="font-size: 12px;">League of Legends</h5>
                                     <div class="text-card">
                                         <p>LPL Summer 2023
@@ -359,12 +356,11 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <div class="card-body" style="
-                  height: 120px;">
+                                <div class="card-body">
                                     <h5 class="card-title" style="font-size: 12px;">CS:GO</h5>
                                     <div class="text-card">
-                                        <p>CCT West Europe
-                                            <img src="../IMG/Feed/red-play.png" alt="" width="50px">
+                                        <p>CCT West Europe</p>
+                                        <img src="../IMG/Feed/red-play.png" alt="" width="50px">
                                     </div>
                                     <div class="datas">
                                         <legend id="legend-card">
